Allow multiple cash remittances per period with linked deposit details.
Link deposits via remittance_id (V88), fix over-aggressive backfill (V89), and expose per-commercial deposits in remittance history.

Co-authored-by: Cursor <cursoragent@cursor.com>